Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-17121

[Gandiva][C++] Adding mask function

    XMLWordPrintableJSON

Details

    Description

      Add mask(str inp[, str uc-mask[, str lc-mask[, str num-mask]]]) function to Gandiva.

      With default masking upper case letters as 'X', lower case letters as 'x' and numbers as 'n'.
      Custom masking as optionally specified in parameters.

      Attachments

        Issue Links

          Activity

            People

              palak9202 Palak Pariawala
              palak9202 Palak Pariawala
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 0.5h
                  0.5h