ARROW-17121: [Gandiva][C++] Adding mask function to Gandiva (#13647)

Add mask(str inp[, str uc-mask[, str lc-mask[, str num-mask]]]) function to Gandiva.

With default masking upper case letters as 'X', lower case letters as 'x' and numbers as 'n'.
Custom masking as specified in parameters.

Lead-authored-by: Palak Pariawala <palak.pariawala@dremio.com>
Co-authored-by: palak-9202 <106559495+palak-9202@users.noreply.github.com>
Signed-off-by: Pindikura Ravindra <ravindra@dremio.com>